<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TermDetailsActivity">

    <TextView
        android:id="@+id/term_detail_start_label"
        android:layout_width="@dimen/detail_label_width"
        android:layout_height="wrap_content"
        android:text="@string/term_detail_start_label"
        android:layout_margin="@dimen/text_margin"
        android:textSize="@dimen/detail_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/term_detail_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="Date"
        android:textSize="@dimen/detail_text_size"
        app:layout_constraintStart_toEndOf="@id/term_detail_start_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/term_detail_end_label"
        android:layout_width="@dimen/detail_label_width"
        android:layout_height="wrap_content"
        android:text="@string/term_detail_end_label"
        android:layout_margin="@dimen/text_margin"
        android:textSize="@dimen/detail_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/term_detail_start_label"/>

    <TextView
        android:id="@+id/term_detail_end"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="Date"
        android:textSize="@dimen/detail_text_size"
        app:layout_constraintTop_toBottomOf="@+id/term_detail_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/term_detail_end_label"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/term_detail_end_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/courses_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/term_detail_courses_label"
        android:textSize="@dimen/detail_text_size"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:src="@drawable/ic_add"
        android:layout_margin="@dimen/text_margin"
        app:borderWidth="0dp"
        app:layout_constraintStart_toEndOf="@+id/courses_label"
        app:layout_constraintTop_toBottomOf="@+id/divider"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rview_term_detail_course"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@+id/fab_add_course"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>